[project]
name = "life_expectancy"
version = "0.1.0"
description = "First assignment of the Foundations Learning Path"
authors = [
    {name = "Fernando Cordeiro", email = "fernando@daredata.engineering"},
    {name = "Frederico Portela", email = "frederico.portela@nos.pt"}
]
dependencies = [
    "pandas",
]

readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["life_expectancy"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "pytest-cov",
    "toml",
]

[tool.coverage.run]
omit = [
    # omit test files
    "*/conftest.py",
    "*/test*",
]

[tool.coverage.report]
fail_under = 80